<resources>
    <string name="app_name">KramBook</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="action_settings">Settings</string>

    <string name="activity_registration">Register</string>
    <string name="activity_signin">Sign In</string>

    <string name="progress_signup">Signing you up&#8230;</string>
    <string name="progress_login">Logging you in&#8230;</string>
    <string name="uploading">Saving data...</string>
    <string name="loading">Loading...</string>
    <string name="fetching">Fetching rooms...</string>

    <string name="banner_ad_unit_id">ca-app-pub-7340006778875243/6974705813</string>
    <!-- Drawer Items -->
    <string name="drawer_home">Home</string>
    <string name="drawer_item_sell">Sell Your Books</string>
    <string name="drawer_item_categories">Categories</string>
    <string name="drawer_item_chat">Chat with seller</string>
    <string name="drawer_item_my_settings">Settings</string>
    <string name="drawer_item_profile">My Profile</string>
    <string name="drawer_item_logout">Log off</string>
    <string name="error_label">Oops</string>

    <!-- Strings related login -->
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username"> enter a username </string>
    <string name="error_blank_password">enter a password, </string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>


    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <string name="progress_uploading">Saving photo...&#8230;</string>
    <string name="saving_info">Saving...&#8230;</string>

    <string name="choose_colg">Choose or Add School</string>
    <string name="school_details">Add School</string>
    <string name="book_condition">Select Book Condition</string>
    <string name="book_detail">Detail</string>

    <string name="title_activity_proceed">Proceed</string>
    <string name="title_complete_profile">Complete your Profile</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="search_view_example">Search view example…</string>
    <string name="edit_profile">Profile</string>
    <string name="edit_profile_label">Edit Profile</string>
    <string name="reset_password">Reset Password</string>
    <string name="save_info">Save</string>

    <string name="title_activity_filter">FilterActivity</string>
    <string name="title_activity_product_enter">Enter Book Details</string>
    <string name="title_activity_category">Select a Category</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Categories</item>
        <item>Chat</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_my_profile">Profile</string>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="dept_prompt">Choose a Department</string>
    <string name="gender_prompt">Choose Gender</string>
    <string name="category_prompt">Choose Category</string>

    <string name="time_ago_prefix"></string>
    <string name="time_ago_suffix">ago</string>
    <string name="time_ago_seconds">less than a minute</string>
    <string name="time_ago_minute">about a minute</string>
    <string name="time_ago_hour">about an hour</string>
    <string name="time_ago_day">a day</string>
    <string name="time_ago_month">about a month</string>
    <string name="time_ago_year">about a year</string>

    <plurals name="time_ago_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="time_ago_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">about %d hours</item>
    </plurals>
    <plurals name="time_ago_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="time_ago_months">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <plurals name="time_ago_years">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>


    <string-array name="dept_array">
        <item>Civil Engineering</item>
        <item>Computer Engineering</item>
        <item>Electrical Engineering</item>
        <item>Electronics Engineering</item>
        <item>Information Technology</item>
        <item>Instrumentation Engineering</item>
        <item>Mechanical Engineering</item>
        <item>Rubber N Leather Technology</item>
    </string-array>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Unspecified</item>
    </string-array>

    <!-- Key name for storing network status in SharedPreferences -->
    <string name="pref_network_status_key" translatable="false">net-status</string>

</resources>
